# ccync

./: .gitattributes  .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md
.github/workflows/: release.yml
crates/ccync-cli/: Cargo.toml
crates/ccync-cli/src/: main.rs
crates/ccync-cli/src/commands/: doctor.rs  init.rs  lifecycle.rs  mod.rs  plugin.rs
crates/ccync-engine/: Cargo.toml
crates/ccync-engine/src/: adopt.rs  catalog.rs  doctor.rs  install.rs  lib.rs  truth.rs
crates/ccync-engine/tests/: filename_guard.rs  removal.rs  runtime_family.rs
crates/ccync-foundation/: Cargo.toml
crates/ccync-foundation/src/: config.rs  env_config.rs  health.rs  json_util.rs  ledger.rs  lib.rs  mcp.rs  paths.rs  platform.rs  render.rs  runtime.rs  secret.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: health.rs  lib.rs  merge.rs  projection.rs  resolver.rs
crates/mcp/src/serializers/: claude_mcp.rs  codex.rs  copilot.rs  mod.rs  opencode.rs
crates/projection/: Cargo.toml
crates/projection/src/: agy.rs  claude_skill.rs  codex_agent.rs  lib.rs  support.rs  tests.rs  tool_map.rs
crates/setup/: Cargo.toml  build.rs  setup.manifest
crates/setup/src/: health.rs  lib.rs  session.rs
docs/: architecture.md  contributing.md  devguide.md  manual.md  naming.md  release.md
docs/i18n/: guide.md
docs/research/: catalog-curation.md
docs/structure/: structure-map.ndjson  structure-map.schema.json
packaging/: gen-release-artifacts.sh  install.ps1  install.sh  publish-public.sh  test-release-artifacts.sh
packaging/homebrew/: ccync.rb.template
packaging/winget/: Monkey1Wizard.ccync.installer.yaml.template  Monkey1Wizard.ccync.locale.en-US.yaml.template  Monkey1Wizard.ccync.yaml.template
plugins/: catalog.json
rtk/: history.db
