[package]
name = "ccync-cli"
version = "0.1.0"
edition = "2021"
description = "ccync — cross-agent plugin / MCP / skills manager (binary: ccync)"
license = "MIT"
repository = "https://gitlab.com/monkey1wizard/ccync"

[[bin]]
name = "ccync"
path = "src/main.rs"

[dependencies]
projection = { path = "../projection" }
ccync-foundation = { path = "../ccync-foundation" }
ccync-engine = { path = "../ccync-engine" }
mcp = { path = "../mcp" }
serde_json = "1"
dirs = "5"
regex = "1.0"
thiserror = "2.0"
setup = { version = "0.1.0", path = "../setup" }

[dev-dependencies]
tempfile = "3"
