[package]
name = "mcp"
version = "0.1.0"
edition = "2021"
description = "ccync MCP config orchestration — variable resolution, safe-merge, per-host atomic write, HealthCheck."
license = "MIT"
repository = "https://gitlab.com/monkey1wizard/ccync"

[lib]
name = "mcp"
path = "src/lib.rs"

[dependencies]
ccync-foundation = { path = "../ccync-foundation" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
thiserror = "2.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
